# project-summarizer-for-llm

./: .gitginore  README.md  pyproject.toml
src/: summarizer.py
tests/: test_summarizer.py
