[tool.poetry]
name = "project-summarizer-for-llm"
version = "0.1.0"
description = "A tool to summarize the contents of a project"
authors = ["sugihara1997"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
typer = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = [
    "tests",
]